# csean-demo

./: .gitignore  Home.py  README.md  pyproject.toml  server.py
models/: airtable.py  sender.py  utils.py
pages/: 1_Upload.py  2_Send_Bulk_Email.py
